--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@commitlint/cli": "^17.0.3",
+    "@element-plus/icons-vue": "^2.0.6",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.6",
+    "md5": "^2.3.0",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -34,7 +39,8 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "svg-sprite-loader": "^6.0.9"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
